[tool.poetry]
name = "astarsample"
version = "0.4a2"
description = "Example project"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Hugo Buddelmeijer <hugo@buddelmeijer.nl>"]

packages = [{include = "sample"}]

[tool.poetry.dependencies]
# When updating the version, also update the versions in .github/workflows/*
# and also re-run "poetry lock --no-update" and commit the changed lock file
python = ">=3.10, <3.15"
numpy = ">=2.1.0,<2.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
