[project]
name = "astarsample"
version = "0.4a4"
description = "Example project"
authors = [
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Oliver Czoske", email = "oliver.czoske@univie.ac.at" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
    "numpy (>=2.3.5,<3.0.0) ; python_version >= '3.13'",
]

[tool.poetry]
packages = [{include = "sample"}]

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
